# orbit

./: .gitignore  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  bench-sleep  bench-tcp  build-all.sh  debug  fmt-all.sh  pyproject.toml  rebuild-std.sh  rust-toolchain.toml  rustfmt.toml  send-payload.py  smoke  test
bl/: Cargo.toml  build.rs  memory.x
bl/.cargo/: config.toml
bl/asm/: boot.S  mem.S  trap.S
bl/src/: lib.rs
console/: Cargo.toml  build.rs
console/src/: main.rs
device/: Cargo.toml
device/src/: lib.rs
docs/: architecture.md  boot.md  kernel-threads.md
hello/: Cargo.toml
hello-fb/: Cargo.toml
hello-fb-std/: Cargo.toml
hello-fb-std/src/: main.rs
hello-fb/src/: main.rs
hello-ratatui-std/: Cargo.toml  memory.x
hello-ratatui-std/src/: main.rs
hello-std/: Cargo.toml
hello-std/src/: main.rs
hello/src/: main.rs
kmain/: Cargo.toml  build.rs  build.sh  memory.x
kmain/.cargo/: config.toml
kmain/asm/: boot.S  mem.S  trap.S  trap.S.bak
kmain/src/: hw.rs  lib.rs  tracked_heap.rs
kmain/src/drivers/: display.rs  e1000.rs  fb.rs  goldfish_rtc.rs  k_gpu.rs  k_serial.rs  mod.rs  plic.rs  virtio_blk_dev.rs  virtio_gpu_dev.rs  virtio_input_dev.rs  virtio_probe.rs
kmain/src/drivers/fonts/: mod.rs  terminus.rs
kmain/src/kernel/: accounting.rs  context.rs  handle.rs  input.rs  key_events.rs  memmap.rs  mod.rs  orbital_elf.rs  page_cache.rs  pci.rs  pending_frees.rs  shared_frame.rs  shared_user_ptr.rs  shootdown.rs  stdin.rs  surface.rs  tlb.rs  user_page.rs
kmain/src/kernel/fs/: mod.rs  tar.rs
kmain/src/ktrace/: mod.rs
kmain/tools/: bdf_to_rust.py
manager/: Cargo.toml
manager/src/: lib.rs
manager/tests/: scheduling.rs
manager/tests/common/: mod.rs
mem/: Cargo.toml
mem/src/: frame.rs  lib.rs
mmu/: Cargo.toml
mmu/src/: lib.rs  mmap.rs  sv48.rs
net_channel/: Cargo.toml
net_channel/src/: lib.rs  spsc.rs
net_channel/tests/: spsc.rs
orbit-abi/: Cargo.toml
orbit-abi/src/: argv.rs  denial.rs  envp.rs  errno.rs  event_fd.rs  fb.rs  fs.rs  handle.rs  input.rs  layout.rs  lib.rs  mmap.rs  net.rs  perms.rs  roles.rs  shadow.rs  stats.rs  syscall.rs  syscall_stats.rs  user.rs
orbit-core/: Cargo.toml
orbit-core/src/: accounting.rs  denial_ring.rs  lib.rs  manager.rs  net.rs  pending_work.rs  ready_queue.rs  roles.rs  sched.rs  shadow_ring.rs  sleep_heap.rs  syscall.rs  tlb_shootdown.rs  trap.rs
orbit-core/tests/: accounting.rs  affinity.rs  apply_outcome.rs  assign_checked.rs  assign_threads.rs  assign_threads_concurrent.rs  assign_threads_no_double.rs  block_reqs.rs  completion.rs  dispatch_syscall_race.rs  event_fd_wake.rs  manager.rs  ms_sleep.rs  net.rs  read_stdin.rs  ready_queue.rs  serial_print.rs  sleep_heap.rs  state_transition.rs  tlb_shootdown.rs  trap_frame.rs
orbit-core/tests/common/: mod.rs
orbit-loader/: Cargo.toml  build.rs
orbit-loader/.cargo/: config.toml
orbit-loader/src/: main.rs
orbit-loader/tools/: send-payload.py  send_payload.py
orbit-metricd/: Cargo.toml
orbit-metricd/src/: main.rs
orbit-ratatui/: Cargo.toml
orbit-ratatui/src/: lib.rs
orbit-rt/: Cargo.toml  build.rs
orbit-rt/src/: argv.rs  env.rs  event_fd.rs  lib.rs  netch.rs  start.rs
orbit-text/: Cargo.toml
orbit-text/src/: lib.rs
orbit-top-std/: Cargo.toml
orbit-top-std/.cargo/: config.toml
orbit-top-std/src/: main.rs
process/: Cargo.toml
process/src/: cap.rs  completion.rs  key_events.rs  lib.rs  sched_lock.rs  spsc.rs  stdin.rs
process/tests/: cap_aliasing.rs  cap_promote.rs  cred_race.rs  exited_gate.rs  key_events.rs  parkedmut_aliasing.rs  stdin.rs
process/tests/common/: mod.rs
rootfs/: README
rootfs/etc/: secret
serial/: Cargo.toml
serial/src/: lib.rs
smoke-perms-roles/: Cargo.toml
smoke-perms-roles/src/: main.rs
smoke-stub-child/: Cargo.toml
smoke-stub-child/.cargo/: config.toml
smoke-stub-child/src/: main.rs
tools/: build-disk.sh  eza_stress.py  netch_timeline.py  orbit_metric_logger.py  orbit_metric_plot.py  perf_compare.py
umode/: Cargo.toml  build.rs  memory.x
umode-event-fd-smoke/: Cargo.toml
umode-event-fd-smoke/.cargo/: config.toml
umode-event-fd-smoke/src/: main.rs
umode-exit-race/: Cargo.toml
umode-exit-race/src/: main.rs
umode-sleep-bench/: Cargo.toml
umode-sleep-bench/src/: main.rs
umode-tcp-bench/: Cargo.toml
umode-tcp-bench/.cargo/: config.toml
umode-tcp-bench/src/: main.rs
umode/.cargo/: config.toml
umode/src/: main.rs
virtio/: Cargo.toml
virtio/src/: discovery.rs  lib.rs  mmio.rs  queue.rs  transport.rs
virtio_blk/: Cargo.toml
virtio_blk/src/: device.rs  lib.rs  proto.rs
virtio_gpu/: Cargo.toml
virtio_gpu/src/: device.rs  lib.rs  proto.rs
virtio_input/: Cargo.toml
virtio_input/src/: device.rs  lib.rs  proto.rs
