[package]
name = "hello-std"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hello-std"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
ab_glyph = "0.2.32"
mio = { version = "1.2", default-features = false, features = ["os-poll", "net"] }
# orbit-abi for direct serial-print so smoke markers land on the
# QEMU `-serial` channel instead of the framebuffer (which is
# invisible under `-nographic`).
orbit-abi = { path = "../orbit-abi" }

# Orbit fork of mio at /home/maya/projects/mio. Sibling of the orbit
# repo; relative path steps out of hello-std/ → orbit/ → into the
# mio fork. libc is vendored under rust/library/ (the orbit shim);
# without the patch, cargo would pull a crates.io libc that has no
# orbit arm.
[patch.crates-io]
libc = { path = "../rust/library/libc" }
mio = { path = "../../mio" }