[package]
name = "kmain"
version = "0.1.0"
edition = "2024"

[dependencies]
mmu = { path = "../mmu", features = ["alloc"] }
device = { path = "../device" }
serial = { path = "../serial" }
riscv = { version = "0.16.0", features = ["rt"] }
mem = { path = "../mem", features = ["alloc"] }
linked_list_allocator = "0.10.5"
process = { path = "../process" }
orbit-core = { path = "../orbit-core" }
orbit-abi = { path = "../orbit-abi" }
riscv_plic = "0.2.0"
heapless = { version = "0.9.2", features = ["portable-atomic", "mpmc_large"] }
elf = { version = "0.8.0", default-features = false }
dtoolkit = { version = "0.1.1", default-features = false }
smoltcp = { path = "../../smoltcp", default-features = false, features = ["alloc", "log", "verbose", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "socket-dhcpv4", "socket-dns", "proto-ipv4"] }
net_channel = {path = "../net_channel", features = ["kernel"] }
tracing = { version = "0.1.44", default-features = false, features = [] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["alloc"] }
log = { version = "0.4.29",  default-features = false }