[package]
name = "net_channel"
version = "0.1.0"
edition = "2024"

[features]
kernel = []

[dependencies]
heapless = { version = "0.9.2", features = ["portable-atomic", "mpmc_large"] }
smoltcp = { path = "../../smoltcp", default-features = false, features = ["socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "socket-dhcpv4", "socket-dns", "proto-ipv4"] }
serial = { path = "../serial" }
mem = { path = "../mem" }
tracing = { version = "0.1.44", default-features = false, features = [] }
