[package]
name = "orbit-abi"
version = "0.1.0"
edition = "2024"

[lib]

# When pulled in as a dependency of std (target_os = "orbit") inside the
# rustc tree, std needs orbit-abi to bind `core` to the
# `rustc-std-workspace-core` stand-in instead of the regular `core` rlib.
# The `rustc-dep-of-std` feature toggles that swap. Outside the rustc
# tree this feature stays off and the crate behaves as a normal
# `no_std` lib. We don't pull `compiler_builtins` because the crate is
# pure constants + inline `asm!` — nothing in here calls a builtin.
[features]
default = []
rustc-dep-of-std = ["core"]

# Kernel-internal policy types: the role registry, transition gating
# functions, and the `ChildPerms` / `TransitionAllowed` witnesses.
# Wire-shape types (`Permissions`, `RoleId`, `CreateProcessV2Args`,
# etc.) stay unconditional. orbit-core and process enable this; user-
# side crates (orbit-rt, net_channel, mem) DO NOT — keeping the
# registry table out of user binaries and preserving orbit-abi's
# "wire shape only by default" boundary. Cargo's feature unification
# means a single user-side dep enabling this would pull it into
# every linked binary, so guard new opt-ins.
kernel-policy = []

[dependencies]
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
