[package]
name = "orbit-rt"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["full-runtime"]

# Tells orbit-rt and its rustc-dep-of-std-aware deps to swap their
# `core` / `alloc` imports for the in-tree std-workspace shims. Set
# when orbit-rt is pulled in as a `rustc-dep-of-std` style transitive
# dep from std-on-orbit. std-on-orbit's Cargo.toml combines this with
# `default-features = false` so the `full-runtime` feature stays off,
# gating out modules with transitive deps (mem/heapless/byteorder/...)
# that don't speak rustc-dep-of-std and therefore can't link into std.
#
# The two `*-workspace-*` deps below (`core`, `compiler_builtins`) only
# get pulled in when this feature is on — they're optional path-deps
# enabled here. Without the swap, orbit-rt's `extern crate core` would
# resolve to a fresh copy and confuse the bootstrap into thinking
# multiple cores exist in the std build's dep graph.
rustc-dep-of-std = [
    "dep:core",
    "orbit-abi/rustc-dep-of-std",
    "net_channel/rustc-dep-of-std",
]

# `mem-alloc` gates the runtime modules that need the `mem` crate's
# buddy `FrameAllocator` — `shared_va` (UPROC_SHARED range tracking),
# `event_fd` (depends on shared_va to reserve its region), `netch`
# (also reserves shared regions), and `env`. Pulled in by both
# `full-runtime` (no_std consumers like umode) and by std-on-orbit
# consumers that want EventFd / NetCh through the safe wrappers
# without the `_start` symbol (`mio` is the canonical example —
# its Selector uses orbit-rt's EventFd but the binary's `_start`
# comes from std-on-orbit's PAL, not from orbit-rt).
#
# `mem` and its transitive deps (`heapless` / `byteorder`) aren't
# `rustc-dep-of-std`-friendly, so this feature stays off when
# orbit-rt is pulled into the std build's dep graph.
mem-alloc = ["dep:mem"]

# `start` provides `_start`: the no_std user-binary entrypoint that
# resolves argv, calls `main()`, and handles process exit. Standalone
# from `mem-alloc` so std-on-orbit consumers (which get `_start` from
# std's PAL) can opt into the rest of the runtime without colliding.
# Internally `_start` calls into the heap and shared-region paths, so
# it implies `mem-alloc`.
start = ["mem-alloc"]

# Default for no_std user binaries (umode, console, hello, orbit-loader,
# benches). Aggregate that includes both `mem-alloc` (the runtime
# modules) and `start` (the `_start` symbol). Existing consumers with
# `default = ["full-runtime"]` keep working; std-on-orbit + mio set
# `default-features = false` and pick just `mem-alloc`.
full-runtime = ["mem-alloc", "start"]

[dependencies]
# dlmalloc backs the `#[global_allocator]` for no_std orbit binaries.
# Same crate std-on-orbit's PAL allocator uses (see
# rust/library/std/src/sys/alloc/orbit.rs), so the runtime story is
# consistent across no_std and std user code.
dlmalloc = { version = "0.2.10", default-features = false, features = [] }
orbit-abi = { path = "../orbit-abi" }
net_channel = { path = "../net_channel", default-features = false, features = [] }
# `alloc` feature pulls in the buddy `FrameAllocator` we use to track
# user-controlled VAs in the kernel-shared range. Optional + gated
# behind `full-runtime` so std-on-orbit's build (which sets
# default-features = false + rustc-dep-of-std) doesn't pull mem and
# its rustc-dep-of-std-incompatible transitive deps into std's graph.
mem = { path = "../mem", features = ["alloc"], optional = true }

# Std-workspace shims, only pulled in by the `rustc-dep-of-std`
# feature. Mirrors the orbit-abi / net_channel pattern: when orbit-rt
# is built inside the std workspace, its `core` import must alias the
# in-tree `rustc-std-workspace-core` package; without the alias the
# build sees two `core` crates and the in-tree compiler refuses to
# acknowledge intrinsics from the wrong copy.
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }

# NOTE: build.rs deliberately has *no* build-dependencies. With Cargo's
# resolver v1 (which the rust source workspace uses), build-dep and
# normal-dep features unify — pulling orbit-abi as a build-dep would
# enable its `rustc-dep-of-std` feature in host-build context too,
# which forces an in-tree-`core` compile before stage1 rustc exists
# and breaks `./x build library`. The two layout constants build.rs
# needs (USER_TEXT_BASE, USER_ARGV_BASE) are hardcoded; a `const _`
# assertion in `src/lib.rs` keeps them in lockstep with orbit-abi.
