[package]
name = "orbit-top-std"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "orbit-top-std"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
ab_glyph = "0.2.32"
orbit-abi = { path = "../orbit-abi" }
orbit-text = { path = "../orbit-text" }
orbit-ratatui = { path = "../orbit-ratatui" }
ratatui = { version = "0.30", default-features = false }

# Same vendored libc patch as hello-ratatui-std — `time` is pulled in
# transitively by ratatui-widgets and needs the orbit-stage1 libc shape.
[patch.crates-io]
libc = { path = "../rust/library/libc" }
