[package]
name = "process"
version = "0.1.0"
edition = "2024"

[features]
# Exposes `Thread::transition_to_unchecked` for test fixtures that need to
# fabricate arbitrary states (or stand in for another subsystem's state
# effect) without the transition-edge validation in `transition_to`. Off
# in the kernel build; enabled by downstream crates' `[dev-dependencies]`.
test-helpers = []

[dependencies]
mmu = { path = "../mmu" }
riscv = { version = "0.16.0", features = ["rt"] }
device = { path = "../device" }
orbit-abi = { path = "../orbit-abi", features = ["kernel-policy"] }
smoltcp = { path = "../../smoltcp", default-features = false, features = ["log", "verbose", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "socket-dhcpv4", "socket-dns", "proto-ipv4", "socket-tcp-cubic"] }
